<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MemberJoinActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/nameETXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailETXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/idETXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/id"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwdETXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/passwd"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signupBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:onClick="clickFunc"
            android:text="@string/sign_upBTN" />

        <Button
            android:id="@+id/cancelBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:onClick="clickFunc"
            android:text="@string/cancelBTN" />
    </LinearLayout>

</LinearLayout>